[tool.poetry]
name = "pyhlml"
version = "1.0.2"
description = "Python3 wrapper for the HLML library."
authors = ["Keegan van Gemeren <kvangemeren@habana.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = ">=42"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
         "setuptools>=42",
	 "wheel"
]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
build-backend = "setuptools.build_meta"
