[metadata]
name = pyhlml
version = 0.0.1
author = HabanaAI
description = Python3 wrapper for the HLML library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lamatriz/pyhlml
project_urls =
	Issues = https://github.com/lamatriz/pyhlml/issues
classifiers =
    Programming Language :: Python :: 3
	Operating System :: Ubuntu :: 18.04 :: 20.04

[options]
package_dir = 
	= pyhlml
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
